--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,9 +10,10 @@ jobs:
       - image: circleci/php:7.4.2-node-browsers
 #      - image: circleci/mysql:8.0
 
-#    environment:
-#      - DB_CONNECTION: sample
-#    working_directory: ~/ci-demo
+    environment:
+      DB_CONNECTION: sqlite
+
+    working_directory: ~/ci-demo
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
@@ -35,7 +36,8 @@ jobs:
             - v1-dependencies-{{ checksum "composer.json" }}
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
-
+      - run: touch storage/testing.sqlite
+      - run: php artisan migrate --env=testing --database=sqlite_testing --force
       - run: composer install -n --prefer-dist
 
       - save_cache:
@@ -52,15 +54,6 @@ jobs:
           paths:
             - node_modules
 
-      # prepare the database
-      - run: touch storage/testing.sqlite
-      - run: php artisan migrate --env=testing --database=sqlite_testing --force
-
       - run:
           name: Run PHPUmit
           command: venodr/bin/phpunit
-
-      # run tests with phpunit or codecept
-      #- run: ./vendor/bin/phpunit
-      - run: ./vendor/bin/codecept build
-      - run: ./vendor/bin/codecept run
