--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,8 @@ jobs:
 
       - run: sudo apt update # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
       - run: sudo docker-php-ext-install zip
+      - run: touch storage/testing.sqlite
+      - run: composer install -n --prefer-dist
 
       # Download and cache dependencies
       - restore_cache:
@@ -36,9 +38,6 @@ jobs:
             - v1-dependencies-{{ checksum "composer.json" }}
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
-      - run: touch storage/testing.sqlite
-      - run: composer install -n --prefer-dist
-
       - save_cache:
           key: v1-dependencies-{{ checksum "composer.json" }}
           paths:
@@ -53,7 +52,7 @@ jobs:
           paths:
             - node_modules
 
-      - run: php artisan migrate
+      - run: php artisan migrate -y
 
       - run:
           name: Run PHPUmit
